test: 날씨 데이터 수집용 ItemReader 테스트 추가